--- a/nodes/scoring.html
+++ b/nodes/scoring.html
@@ -25,6 +25,10 @@
         <label for="node-input-cid"><i class="fa fa-question"></i> Context ID</label>
         <input type="text" id="node-input-cid" placeholder="context ID for model scoring path">
     </div>
+    <div class="form-row credentials" style="display: none;">
+        <label for="node-input-key"><i class="fa fa-key"></i> API Key</label>
+        <input type="password" id="node-input-key" placeholder="API key">
+    </div>
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
