more scoring node fun

--- a/nodes/scoring.html
+++ b/nodes/scoring.html
@@ -56,8 +56,10 @@
             category: 'analysis',
             defaults: {
                 name: {value:""},
-                cid: {value:"", required:true},
-                geocode: {value: ""}
+                cid: {value:"", required:true}
+            },
+            credentials: {
+                key: {type:"password"}
             },
             color: "rgb(192, 222, 237)",
             inputs: 1,
