--- a/nodes/scoring.html
+++ b/nodes/scoring.html
@@ -27,7 +27,7 @@
     </div>
     <div class="form-row">
         <label for="node-input-cid"><i class="fa fa-question"></i> Context ID</label>
-        <input type="text" id="node-input-cid" placeholder="Please hit search" style="width:62%">
+        <input type="text" id="node-input-cid" placeholder="Please hit search" style="width:61%">
         <a id="node-lookup-key" class="btn"><i class="fa fa-search"></i></a>
     </div>
     <div class="form-row">
@@ -40,14 +40,14 @@
     <p>The Predictive Analytics node allows you score an input set of parameters using an SPSS model running
     on a <a href="http://bluemix.net" target="_new">Bluemix</a> Predictive Analytics Service.</p>
     <p>You must pass in a <code>msg.payload</code> object <i>as required</i> by the model... so you must
-    know what the model looks like. Typically it would have properties similar to :</p>
+    know what the model looks like. Typically it would be an object similar to :</p>
     <pre>{
-    "tablename":"testing",
+    "tablename":"scoring",
     "header":["X","Y","Z"],
     "data":[[4,2,1]]
 }</pre>
     <p>The <code>data</code> may be an array of multiple input arrays, and each element will be scored.</p>
-    <p>The results will be returned as a <code>msg.payload</code> object formatted as per the model</p>
+    <p>The results will be returned as a <code>msg.payload</code> object formatted as defined by the model.</p>
     <p>For more information about the Predictive Analytics service, read the
     <a href="https://www.ng.bluemix.net/docs/services/PredictiveModeling/index.html" target="_new">documentation</a>.</p>
 </script>
@@ -80,8 +80,8 @@
 
                 $.getJSON('predictive_analytics/vcap/')
                     .done(function (service) {
+                        if (service) { bm = true; }
                         $('.credentials').toggle(!service);
-                        bm = true;
                     })
                     .fail(function () {
                         $('.credentials').show();
