Fix to docs re anonymous access
as per mailing list

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                                 <ul>
                                     <li><code>NODE_RED_USERNAME</code> - the username to secure the editor with</li>
                                     <li><code>NODE_RED_PASSWORD</code> - the password to secure the editor with</li>
-                                    <li><code>NODE_RED_GUEST_USER</code> - set to <code>true</code> to allow anonymous users to have read-only access to the editor</li>
+                                    <li><code>NODE_RED_GUEST_ACCESS</code> - set to <code>true</code> to allow anonymous users to have read-only access to the editor</li>
                                 </ul>
 
                                 <h5>Bluemix console</h5>
